--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -213,7 +213,7 @@ TcpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 TemplateSequenceEditorSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
-PlayerCharacter_C=PlayerCharacter_C.Rendering.LOD,
+PlayerCharacter_C=
 CapsuleComponent=PlayerCharacter_C.Rendering.LOD,
 BrushComponent=PlayerCharacter_C.Rendering.LOD,
 Brush=PlayerCharacter_C.Rendering.LOD,
@@ -228,13 +228,16 @@ K2Node_VariableSet=PlayerCharacter_C.Rendering.LOD,
 MainMenu_C=
 PropertyWrapper=PlayerCharacter_C.Rendering.LOD,
 K2Node_VariableGet=PlayerCharacter_C.Rendering.LOD,
-MovieSceneTakeSettings=
-TakeRecorderMicrophoneAudioSourceSettings=
-MovieSceneAnimationTrackRecorderEditorSettings=
-TakeRecorderWorldSourceSettings=
+MovieSceneTakeSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TakeRecorderMicrophoneAudioSourceSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MovieSceneAnimationTrackRecorderEditorSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TakeRecorderWorldSourceSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 w_MainMenu_C=
 W_ServerSlot_C=
 W_ServerBrowser_C=
+Skybox_C=PlayerCharacter_C.Rendering.LOD,
+ConcertClientConfig=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ConcertSyncConfig=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 
 [EditorStartup]
 LastLevel=/Game/Maps/SurBoxWorld
@@ -1049,25 +1052,106 @@ K2Node_CallFunction.Graph=True
 W_ServerBrowser_C.Default=True
 ScrollBox.Events=True
 K2Node_InputAxisEvent.Input=True
+BP_Sky_Sphere_C.Tick=True
+Skybox_C.Tick=True
+Skybox_C.Default=True
+Skybox_C.Override settings=True
+Skybox_C.Replication=True
+Skybox_C.Rendering=True
+Skybox_C.Collision=True
+Skybox_C.Actor=True
+Skybox_C.Input=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+Skybox_C.TransformCommon=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+ConcertClientConfig.Client Settings=True
+ConcertClientConfig.Source Control Settings=True
+ConcertSyncConfig.Transaction Settings=True
+ConcertSyncConfig.Package Settings=True
+Skybox_C.Surface Materials=True
+Skybox_C.Geometry=True
+Skybox_C.Surface Properties=True
+K2Node_InputAction.Input=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter.PlayerCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/PlayerCharacter
-MRUItem1=/Game/Maps/SurBoxWorld
-MRUItem2=/Game/MainMenu/W_ServerSlot
-MRUItem3=/Game/MainMenu/W_ServerBrowser
-MRUItem4=/Game/Maps/MainMenu
-MRUItem5=/Game/MainMenu/w_MainMenu
-MRUItem6=/Game/Maps/SurBoxGameInstance
-MRUItem7=/Game/GameMode/SurBoxMode
-MRUItem8=/Game/Player/PlayerCharacter
-MRUItem9=/Game/SurBoxGameInstance
-MRUItem10=/Game/PlayerCharacter
-MRUItem11=/Game/SurBoxMode
-MRUItem12=/Game/SurBoxWorld
+MRUItem0=/Game/Maps/SurBoxWorld
+MRUItem1=/Game/Blueprints/PlayerCharacter
+MRUItem2=/Game/Materials/SkyboxMat
+MRUItem3=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem4=/Game/Blueprints/Skybox
+MRUItem5=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem6=/Game/MainMenu/W_ServerSlot
+MRUItem7=/Game/MainMenu/W_ServerBrowser
+MRUItem8=/Game/Maps/MainMenu
+MRUItem9=/Game/MainMenu/w_MainMenu
+MRUItem10=/Game/Maps/SurBoxGameInstance
+MRUItem11=/Game/GameMode/SurBoxMode
+MRUItem12=/Game/Player/PlayerCharacter
+MRUItem13=/Game/SurBoxGameInstance
+MRUItem14=/Game/PlayerCharacter
+MRUItem15=/Game/SurBoxMode
+MRUItem16=/Game/SurBoxWorld
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1083,7 +1167,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -1094,7 +1178,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/MainMenu
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1246,14 +1330,16 @@ TcpMessagingSettings=True
 UdpMessagingSettings=True
 WmfMediaSettings=True
 EditorStyleSettings=True
+ConcertClientConfig=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Skybox.Skybox;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight;
 RecentlyPlaced=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight.HDRI_Epic_Courtyard_Daylight;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
-RecentlyPlaced=/Game/Player/PlayerCharacter.PlayerCharacter;
+RecentlyPlaced=/Game/Blueprints/PlayerCharacter.PlayerCharacter;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
@@ -1300,18 +1386,21 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 LinuxTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
 MacTargetSettings="\"Object.Audio.Audio|CookOverrides\" "
 LuminRuntimeSettings="\"Object.Audio.Audio|CookOverrides\" "
+UdpMessagingSettings="\"Object.Transport.StaticEndpoints\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/PlayerCharacter.PlayerCharacter=1
 /Game/SurBoxMode.SurBoxMode=1
 /Game/Maps/MainMenu.MainMenu:PersistentLevel.MainMenu=1
 /Game/GameMode/SurBoxMode.SurBoxMode=1
+/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere=0
+/Engine/EngineSky/M_Sky_Panning_Clouds2.M_Sky_Panning_Clouds2=0
 
 [MessageLog]
 LastLogListing=PIE
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=310.000
+ScreenPosition=X=505.000 Y=124.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2308,13 +2397,83 @@ MovieRendererName=
 [DetailCategoriesAdvanced]
 K2Node_CustomEvent.Graph=True
 ProjectPackagingSettings.Packaging=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
 [PathColor]
 /Game/Blueprints=(R=0.000000,G=0.100000,B=1.000000,A=1.000000)
 /Game/StarterContent=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 /Game/Maps=(R=1.000000,G=0.500000,B=0.000000,A=1.000000)
 /Game/UI=(R=0.000000,G=0.000000,B=0.500000,A=1.000000)
+/Game/Materials=(R=0.000000,G=0.500000,B=0.000000,A=1.000000)
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
