--- a/SurBox.uproject
+++ b/SurBox.uproject
@@ -18,6 +18,10 @@
 		{
 			"Name": "AdvancedSteamSessions",
 			"Enabled": true
+		},
+		{
+			"Name": "MultiUserClient",
+			"Enabled": true
 		}
 	]
 }
