--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+Saved/Config/Windows/EditorPerProjectUserSettings.ini
+Saved/Logs/SurBox.log
