--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -71,6 +71,12 @@ ClientSettings=(DisplayName="Retr0A",AvatarColor=(R=0.000000,G=1.000000,B=0.5000
 SourceControlSettings=(ValidationMode=Hard)
 EndpointSettings=(bEnableLogging=False,PurgeProcessedMessageDelaySeconds=30,RemoteEndpointTimeoutSeconds=60)
 
+[/Script/ConcertTakeRecorder.ConcertSessionRecordSettings]
+LocalSettings=(bRecordOnClient=True,bTransactSources=False)
+
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
+
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
 ToggleKeysHotkey=False
@@ -78,7 +84,4 @@ FilterKeysHotkey=False
 StickyKeysConfirmation=True
 ToggleKeysConfirmation=True
 FilterKeysConfirmation=True
-
-[/Script/ConcertTakeRecorder.ConcertSessionRecordSettings]
-LocalSettings=(bRecordOnClient=True,bTransactSources=False)
 
