--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1266,19 +1266,18 @@ Texture2D.Compositing=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter.PlayerCharacter
-OpenAssetsAtExit=/Game/Materials/MainMenuMat.MainMenuMat
 OpenAssetsAtExit=/Game/UI/MainMenuUI.MainMenuUI
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Textures/ButtonPressed
-MRUItem1=/Game/Textures/ButtonHovered
-MRUItem2=/Game/Textures/ButtonNormal
-MRUItem3=/Game/Textures/MainMenuBackground
-MRUItem4=/Game/UI/MainMenuUI
-MRUItem5=/Game/Materials/MainMenuMat
-MRUItem6=/Game/Textures/MainMenuBackgroundMat
-MRUItem7=/Game/Textures/MainMenuTexture
-MRUItem8=/Game/Blueprints/PlayerCharacter
+MRUItem0=/Game/UI/MainMenuUI
+MRUItem1=/Game/Materials/MainMenuMat
+MRUItem2=/Game/Blueprints/PlayerCharacter
+MRUItem3=/Game/Textures/ButtonPressed
+MRUItem4=/Game/Textures/ButtonHovered
+MRUItem5=/Game/Textures/ButtonNormal
+MRUItem6=/Game/Textures/MainMenuBackground
+MRUItem7=/Game/Textures/MainMenuBackgroundMat
+MRUItem8=/Game/Textures/MainMenuTexture
 MRUItem9=/Game/Maps/MainMenu
 MRUItem10=/Game/Maps/SurBoxWorld
 MRUItem11=/Game/Materials/SkyboxMat
@@ -1554,6 +1553,7 @@ Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal
 /Game/Textures/ButtonNormal.ButtonNormal=1
 /Game/Textures/ButtonHovered.ButtonHovered=1
 /Game/Textures/ButtonPressed.ButtonPressed=1
+/Game/Materials/MainMenuMat.MainMenuMat=0
 
 [MessageLog]
 LastLogListing=PIE
@@ -2587,7 +2587,6 @@ ChangeVariableType_Warning=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
