--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ Plugins/*/Intermediate/*
 DerivedDataCache/*
 Saved/Config/Windows/EditorPerProjectUserSettings.ini
 Saved/Logs/SurBox.log
+Saved/Config/Windows/EditorPerProjectUserSettings.ini
+Saved/Logs/SurBox.log
