--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ Saved/Config/Windows/EditorPerProjectUserSettings.ini
 Saved/Logs/SurBox.log
 Saved/Config/Windows/EditorPerProjectUserSettings.ini
 Saved/Logs/SurBox.log
+Saved/Config/Windows/EditorPerProjectUserSettings.ini
+*.log
