Little changes in toon shader

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -215,7 +215,7 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.Turn,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 PlayerCharacter_C=
 CapsuleComponent=
-BrushComponent=
+BrushComponent=PlayerCharacter_C.Rendering.LOD,
 Brush=PlayerCharacter_C.Rendering.LOD,
 PlayerStart=PlayerCharacter_C.Rendering.LOD,
 SceneComponent=
@@ -1298,33 +1298,40 @@ PostProcessVolume.PostProcessVolumeSettings=True
 PostProcessVolume.Replication=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionSceneTexture.UMaterialExpressionSceneTexture=True
+MaterialExpressionSceneTexture.MaterialExpression=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter.PlayerCharacter
+OpenAssetsAtExit=/Game/Materials/ToonShader.ToonShader
 OpenAssetsAtExit=/Game/UI/MainMenuUI.MainMenuUI
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/TerrainMat
-MRUItem1=/Game/Maps/SurBoxWorld
-MRUItem2=/Game/Maps/MainMenu
-MRUItem3=/Game/UI/MainMenuUI
-MRUItem4=/Game/Materials/MainMenuMat
-MRUItem5=/Game/Blueprints/PlayerCharacter
-MRUItem6=/Game/Textures/ButtonPressed
-MRUItem7=/Game/Textures/ButtonHovered
-MRUItem8=/Game/Textures/ButtonNormal
-MRUItem9=/Game/Textures/MainMenuBackground
-MRUItem10=/Game/Textures/MainMenuBackgroundMat
-MRUItem11=/Game/Textures/MainMenuTexture
-MRUItem12=/Game/Materials/SkyboxMat
-MRUItem13=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem14=/Game/Blueprints/Skybox
-MRUItem15=/Engine/EngineSky/BP_Sky_Sphere
-MRUItem16=/Game/MainMenu/W_ServerSlot
-MRUItem17=/Game/MainMenu/W_ServerBrowser
-MRUItem18=/Game/MainMenu/w_MainMenu
-MRUItem19=/Game/Maps/SurBoxGameInstance
+MRUItem0=/Game/Materials/ToonShader
+MRUItem1=/Game/Materials/TerrainMat
+MRUItem2=/Game/Maps/SurBoxWorld
+MRUItem3=/Game/Maps/MainMenu
+MRUItem4=/Game/UI/MainMenuUI
+MRUItem5=/Game/Materials/MainMenuMat
+MRUItem6=/Game/Blueprints/PlayerCharacter
+MRUItem7=/Game/Textures/ButtonPressed
+MRUItem8=/Game/Textures/ButtonHovered
+MRUItem9=/Game/Textures/ButtonNormal
+MRUItem10=/Game/Textures/MainMenuBackground
+MRUItem11=/Game/Textures/MainMenuBackgroundMat
+MRUItem12=/Game/Textures/MainMenuTexture
+MRUItem13=/Game/Materials/SkyboxMat
+MRUItem14=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem15=/Game/Blueprints/Skybox
+MRUItem16=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem17=/Game/MainMenu/W_ServerSlot
+MRUItem18=/Game/MainMenu/W_ServerBrowser
+MRUItem19=/Game/MainMenu/w_MainMenu
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1506,6 +1513,8 @@ EditorStyleSettings=True
 ConcertClientConfig=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Script/Engine.SceneCapture2D;
 RecentlyPlaced=/Script/Engine.SceneCaptureCube;
@@ -1519,11 +1528,9 @@ RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_
 RecentlyPlaced=/Game/StarterContent/HDRI/HDRI_Epic_Courtyard_Daylight.HDRI_Epic_Courtyard_Daylight;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
 RecentlyPlaced=/Game/Blueprints/PlayerCharacter.PlayerCharacter;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
