--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -248,7 +248,7 @@ Landscape=PlayerCharacter_C.Rendering.LOD,
 PostProcessVolume=PlayerCharacter_C.Rendering.LOD,
 
 [EditorStartup]
-LastLevel=/Game/Maps/SurBoxWorld
+LastLevel=/Game/Maps/MainMenu
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1321,20 +1321,19 @@ MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Materials/TerrainMat.TerrainMat
-OpenAssetsAtExit=/Game/Materials/ToonShader.ToonShader
+OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter.PlayerCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/ToonShader
-MRUItem1=/Game/Maps/SurBoxWorld
-MRUItem2=/Game/Maps/MainMenu
-MRUItem3=/Game/Materials/TerrainMat
-MRUItem4=/Game/UI/ServerBrowser
-MRUItem5=/Game/Materials/SkyboxMat
-MRUItem6=/Game/Blueprints/Skybox
-MRUItem7=/Game/UI/MainMenuUI
-MRUItem8=/Game/Materials/MainMenuMat
-MRUItem9=/Game/Blueprints/PlayerCharacter
+MRUItem0=/Game/Blueprints/PlayerCharacter
+MRUItem1=/Game/Materials/ToonShader
+MRUItem2=/Game/Maps/SurBoxWorld
+MRUItem3=/Game/Maps/MainMenu
+MRUItem4=/Game/Materials/TerrainMat
+MRUItem5=/Game/UI/ServerBrowser
+MRUItem6=/Game/Materials/SkyboxMat
+MRUItem7=/Game/Blueprints/Skybox
+MRUItem8=/Game/UI/MainMenuUI
+MRUItem9=/Game/Materials/MainMenuMat
 MRUItem10=/Game/Textures/ButtonPressed
 MRUItem11=/Game/Textures/ButtonHovered
 MRUItem12=/Game/Textures/ButtonNormal
@@ -1622,9 +1621,9 @@ MaterialExpression=
 LastLogListing=LightingResults
 
 [RootWindow]
-ScreenPosition=X=505.000 Y=124.000
+ScreenPosition=X=130.000 Y=231.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [Directories2]
 UNR=../../../../../dev/SurBox/Content/Maps
@@ -2557,6 +2556,7 @@ ConcertTakeRecorder.TimeStamp=2021.11.20-10.21.45
 ConcertTakeRecorder.LastCompileMethod=Unknown
 
 [PluginBrowser]
+InstalledPlugins=DarkerNodes
 InstalledPlugins=XRVisualization
 InstalledPlugins=AdvancedSessions
 InstalledPlugins=AdvancedSteamSessions
@@ -2770,4 +2770,97 @@ PaletteThumbnailScale=0.300000
 IsInSingleInstantiationMode=False
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
+
+[/Script/EditorStyle.EditorStyleSettings]
+SelectionColor=(R=0.238398,G=0.070360,B=0.013702,A=1.000000)
+PressedSelectionColor=(R=0.238398,G=0.070360,B=0.013702,A=1.000000)
+InactiveSelectionColor=(R=0.042311,G=0.028426,B=0.019382,A=1.000000)
+LogNormalColor=(R=0.720000,G=0.720000,B=0.720000,A=1.000000)
+bColorVisionDeficiencyCorrection=False
+bColorVisionDeficiencyCorrectionPreviewWithDeficiency=False
+KeyboardFocusColor=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
+EditorWindowBackgroundColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+EditorMainWindowBackgroundOverride=(ImageSize=(X=32.000000,Y=32.000000),Margin=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000),TintColor=(SpecifiedColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000),ColorUseRule=UseColor_Specified),ResourceObject=None,ResourceName="",UVRegion=(Min=(X=0.000000,Y=0.000000),Max=(X=0.000000,Y=0.000000),bIsValid=0),DrawAs=Image,Tiling=NoTile,Mirroring=NoMirror,ImageType=NoImage,bIsDynamicallyLoaded=False)
+EditorChildWindowBackgroundOverride=(ImageSize=(X=32.000000,Y=32.000000),Margin=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000),TintColor=(SpecifiedColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000),ColorUseRule=UseColor_Specified),ResourceObject=None,ResourceName="",UVRegion=(Min=(X=0.000000,Y=0.000000),Max=(X=0.000000,Y=0.000000),bIsValid=0),DrawAs=Image,Tiling=NoTile,Mirroring=NoMirror,ImageType=NoImage,bIsDynamicallyLoaded=False)
+bResetEditorWindowBackgroundSettings=False
+bUseGrid=True
+RegularColor=(R=0.012983,G=0.012983,B=0.012983,A=1.000000)
+RuleColor=(R=0.021219,G=0.021219,B=0.021219,A=1.000000)
+CenterColor=(R=0.080220,G=0.080220,B=0.080220,A=1.000000)
+GridSnapSize=16
+GraphBackgroundBrush=(ImageSize=(X=32.000000,Y=32.000000),Margin=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000),TintColor=(SpecifiedColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000),ColorUseRule=UseColor_Specified),ResourceObject=None,ResourceName="",UVRegion=(Min=(X=0.000000,Y=0.000000),Max=(X=0.000000,Y=0.000000),bIsValid=0),DrawAs=Image,Tiling=NoTile,Mirroring=NoMirror,ImageType=NoImage,bIsDynamicallyLoaded=False)
+bShowNativeComponentNames=True
+LogTimestampMode=None
+bPromoteOutputLogWarningsDuringPIE=False
+AssetEditorOpenLocation=Default
+bEnableColorizedEditorTabs=True
+bEnableLegacyEditorModeUI=False
+
+[/Script/DarkerNodes.DarkerNodesSettings]
+MasterActivate=True
+UseGlobalSettings=False
+LoadGlobalSettings=False
+ReloadDefaultStyle=False
+UpdateMaterials=False
+PluginVersionUpdate=2.6
+ThemeLight=Darker
+LightTheme=False
+ThemeTemperature=Normal
+PrimaryColor=Orange
+ButtonPadding=Normal
+ButtonRadius=2
+ButtonBorder=None
+FontSize=Normal
+FontFamily=Roboto
+UseCustomRegularFont=False
+RegularFont=(FilePath="../../../Engine/Content/Slate/Fonts/Roboto-Regular.ttf")
+UseCustomBoldFont=False
+BoldFont=(FilePath="../../../Engine/Content/Slate/Fonts/Roboto-Regular.ttf")
+UseCustomItalicFont=False
+ItalicFont=(FilePath="../../../Engine/Content/Slate/Fonts/Roboto-Italic.ttf")
+ActivateBlueprintTheme=True
+BlueprintRegularNodeRadius=2
+BlueprintVarNodeRadius=2
+BlueprintVarNodeLine=Thin
+BlueprintVarNodeStyle=DarkGlass
+BlueprintNodeHeaderOpacity=0.250000
+BlueprintNodeHeaderSaturation=1.000000
+ExtendNodes=False
+DisableBlueprintGrid=False
+DisableUMGGrid=False
+OriginAxisOpacity=0.500000
+UseCustomScrollbar=True
+UseCustomIcons=True
+IconStyle=Line
+UseIconColorization=False
+UseCustomPanels=True
+UseCustomButton=True
+OverwriteColors=True
+UseGreyCustomization=False
+GreyDark=(B=20,G=20,R=20,A=255)
+GreyBase=(B=40,G=40,R=40,A=255)
+GreyLight=(B=120,G=120,R=120,A=255)
+UseColorCustomization=False
+CustomPrimaryColor=(B=23,G=110,R=229,A=255)
+TextColor=(B=200,G=200,R=200,A=255)
+ScrollbarColor=(B=20,G=20,R=20,A=255)
+UseWindowCustomization=False
+MainWindowColor=(B=40,G=40,R=40,A=255)
+ChildWindowColor=(B=40,G=40,R=40,A=255)
+UseBlueprintColorCustomization=False
+GridLineColor=(B=30,G=30,R=30,A=255)
+GridRuleColor=(B=40,G=40,R=40,A=255)
+GridCenterColor=(B=80,G=80,R=80,A=255)
+RegularNodeBackground=(B=10,G=10,R=10,A=191)
+RegularNodeBorder=(B=10,G=10,R=10,A=255)
+VarNodeBackground=(B=10,G=10,R=10,A=76)
+VarNodeBorder=(B=10,G=10,R=10,A=255)
+UseButtonColorCustomization=False
+ButtonBorderColor=(B=20,G=20,R=20,A=255)
+ButtonPrimary=(B=178,G=96,R=0,A=255)
+ButtonSuccess=(B=17,G=161,R=58,A=255)
+ButtonInfo=(B=178,G=96,R=0,A=255)
+ButtonWarning=(B=0,G=179,R=223,A=255)
+ButtonDanger=(B=0,G=0,R=178,A=255)
+ReloadTextureResources=False
 
