Added basic textures

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -248,7 +248,7 @@ Landscape=PlayerCharacter_C.Rendering.LOD,
 PostProcessVolume=PlayerCharacter_C.Rendering.LOD,
 
 [EditorStartup]
-LastLevel=/Game/Maps/MainMenu
+LastLevel=/Game/Maps/SurBoxWorld
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1322,28 +1322,30 @@ MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter.PlayerCharacter
+OpenAssetsAtExit=/Game/Materials/ToonShader.ToonShader
+OpenAssetsAtExit=/Game/Materials/TerrainMat.TerrainMat
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/PlayerCharacter
-MRUItem1=/Game/Materials/ToonShader
-MRUItem2=/Game/Maps/SurBoxWorld
-MRUItem3=/Game/Maps/MainMenu
-MRUItem4=/Game/Materials/TerrainMat
-MRUItem5=/Game/UI/ServerBrowser
-MRUItem6=/Game/Materials/SkyboxMat
-MRUItem7=/Game/Blueprints/Skybox
-MRUItem8=/Game/UI/MainMenuUI
-MRUItem9=/Game/Materials/MainMenuMat
-MRUItem10=/Game/Textures/ButtonPressed
-MRUItem11=/Game/Textures/ButtonHovered
-MRUItem12=/Game/Textures/ButtonNormal
-MRUItem13=/Game/Textures/MainMenuBackground
-MRUItem14=/Game/Textures/MainMenuBackgroundMat
-MRUItem15=/Game/Textures/MainMenuTexture
-MRUItem16=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem17=/Engine/EngineSky/BP_Sky_Sphere
-MRUItem18=/Game/MainMenu/W_ServerSlot
-MRUItem19=/Game/MainMenu/W_ServerBrowser
+MRUItem0=/Game/Textures/Stone
+MRUItem1=/Game/Maps/SurBoxWorld
+MRUItem2=/Game/Materials/TerrainMat
+MRUItem3=/Game/Textures/Grass
+MRUItem4=/Game/Materials/ToonShader
+MRUItem5=/Game/Blueprints/PlayerCharacter
+MRUItem6=/Game/Maps/MainMenu
+MRUItem7=/Game/UI/ServerBrowser
+MRUItem8=/Game/Materials/SkyboxMat
+MRUItem9=/Game/Blueprints/Skybox
+MRUItem10=/Game/UI/MainMenuUI
+MRUItem11=/Game/Materials/MainMenuMat
+MRUItem12=/Game/Textures/ButtonPressed
+MRUItem13=/Game/Textures/ButtonHovered
+MRUItem14=/Game/Textures/ButtonNormal
+MRUItem15=/Game/Textures/MainMenuBackground
+MRUItem16=/Game/Textures/MainMenuBackgroundMat
+MRUItem17=/Game/Textures/MainMenuTexture
+MRUItem18=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem19=/Engine/EngineSky/BP_Sky_Sphere
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1616,9 +1618,11 @@ MaterialExpression=
 /Game/Materials/MainMenuMat.MainMenuMat=0
 /Game/Materials/TerrainMat.TerrainMat=0
 /Game/Materials/SkyboxMat.SkyboxMat=1
+/Game/Textures/Grass.Grass=1
+/Game/Textures/Stone.Stone=1
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=130.000 Y=231.000
