--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1321,8 +1321,6 @@ MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/MainMenuUI.MainMenuUI
-OpenAssetsAtExit=/Game/Blueprints/SurBoxGameInstance.SurBoxGameInstance
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/SurBoxGameInstance
@@ -1620,6 +1618,7 @@ MaterialExpression=
 /Game/Textures/Grass.Grass=1
 /Game/Textures/Stone.Stone=1
 /Game/UI/MainMenuUI.MainMenuUI=1
+/Game/Blueprints/SurBoxGameInstance.SurBoxGameInstance=1
 
 [MessageLog]
 LastLogListing=PIE
