--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1325,12 +1325,6 @@ SurBoxWorld_C.Input=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter.PlayerCharacter
-OpenAssetsAtExit=/Game/Materials/ToonShader.ToonShader
-OpenAssetsAtExit=/Game/Materials/TerrainMat.TerrainMat
-OpenAssetsAtExit=/Game/UI/MainMenuUI.MainMenuUI
-OpenAssetsAtExit=/Game/Blueprints/SurBoxMode.SurBoxMode
-OpenAssetsAtExit=/Game/Blueprints/SurBoxGameInstance.SurBoxGameInstance
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/SurBoxGameInstance
@@ -1629,7 +1623,7 @@ MaterialExpression=
 /Game/Textures/Stone.Stone=1
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [RootWindow]
 ScreenPosition=X=130.000 Y=231.000
