--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -218,7 +218,7 @@ CapsuleComponent=
 BrushComponent=
 Brush=PlayerCharacter_C.Rendering.LOD,
 PlayerStart=PlayerCharacter_C.Rendering.LOD,
-SceneComponent=PlayerCharacter_C.Rendering.LOD,
+SceneComponent=
 BP_Sky_Sphere_C=PlayerCharacter_C.Rendering.LOD,
 SphereComponent=PlayerCharacter_C.Rendering.LOD,
 DefaultPawn=PlayerCharacter_C.Rendering.LOD,
@@ -1353,35 +1353,38 @@ FoliageType_Actor.InstanceSettings=True
 FoliageType_Actor.Physics=True
 FoliageType_Actor.Scalability=True
 FoliageType_Actor.VirtualTexture=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/StaticMeshes/Grass.Grass
 OpenAssetsAtExit=/Game/Materials/GrassMat.GrassMat
 OpenAssetsAtExit=/Game/Blueprints/Grass.Grass
+OpenAssetsAtExit=/Game/Materials/TerrainMat.TerrainMat
 OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter.PlayerCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/SurBoxWorld
-MRUItem1=/Game/Blueprints/PlayerCharacter
-MRUItem2=/Game/Blueprints/Grass
-MRUItem3=/Game/Materials/GrassMat
-MRUItem4=/Game/StaticMeshes/Grass
-MRUItem5=/Game/Blueprints/SurBoxGameInstance
-MRUItem6=/Game/Maps/MainMenu
-MRUItem7=/Game/Blueprints/SurBoxMode
-MRUItem8=/Game/UI/MainMenuUI
-MRUItem9=/Game/Textures/Stone
-MRUItem10=/Game/Materials/TerrainMat
-MRUItem11=/Game/Textures/Grass
-MRUItem12=/Game/Materials/ToonShader
-MRUItem13=/Game/UI/ServerBrowser
-MRUItem14=/Game/Materials/SkyboxMat
-MRUItem15=/Game/Blueprints/Skybox
-MRUItem16=/Game/Materials/MainMenuMat
-MRUItem17=/Game/Textures/ButtonPressed
-MRUItem18=/Game/Textures/ButtonHovered
-MRUItem19=/Game/Textures/ButtonNormal
+MRUItem0=/Game/Textures/Dirt
+MRUItem1=/Game/Materials/TerrainMat
+MRUItem2=/Game/Maps/SurBoxWorld
+MRUItem3=/Game/Blueprints/PlayerCharacter
+MRUItem4=/Game/Blueprints/Grass
+MRUItem5=/Game/Materials/GrassMat
+MRUItem6=/Game/StaticMeshes/Grass
+MRUItem7=/Game/Blueprints/SurBoxGameInstance
+MRUItem8=/Game/Maps/MainMenu
+MRUItem9=/Game/Blueprints/SurBoxMode
+MRUItem10=/Game/UI/MainMenuUI
+MRUItem11=/Game/Textures/Stone
+MRUItem12=/Game/Textures/Grass
+MRUItem13=/Game/Materials/ToonShader
+MRUItem14=/Game/UI/ServerBrowser
+MRUItem15=/Game/Materials/SkyboxMat
+MRUItem16=/Game/Blueprints/Skybox
+MRUItem17=/Game/Materials/MainMenuMat
+MRUItem18=/Game/Textures/ButtonPressed
+MRUItem19=/Game/Textures/ButtonHovered
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1657,6 +1660,7 @@ MaterialExpression=
 /Game/Materials/SkyboxMat.SkyboxMat=1
 /Game/Textures/Grass.Grass=1
 /Game/Textures/Stone.Stone=1
+/Game/Textures/Dirt.Dirt=0
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -2708,6 +2712,7 @@ OnlyBuildVisibility=False
 /Game/Textures=(R=0.500000,G=0.000000,B=0.000000,A=1.000000)
 /Game/LayerInfos=(R=0.215861,G=0.527115,B=1.000000,A=1.000000)
 /Game/StaticMeshes=(R=0.000000,G=1.000000,B=1.000000,A=1.000000)
+/Game/Foliages=(R=0.003677,G=0.052861,B=0.003677,A=1.000000)
 
 [MaterialEditor]
 PrimType=1
